<resources>
    <string name="app_name">易交易</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">保存</string>
    <string name="contentDescription_image">Image</string>
    <string name="title_activity_chart">ChartActivity</string>
    <string name="average_price">均价</string>
    <string name="newest_price">最新价</string>
    <string name="title_activity_lock">LockActivity</string>
    <string name="title_activity_enter">EnterActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="forget_hand_password">忘记手势密码</string>
    <string name="chartInfo">最新价：%1$.2f 均价:%2$.2f p:%3$d</string>
    <string name="__testPhone">18761844602</string>
    <string name="__testNumber">15848.123</string>
    <string name="login">登录</string>
    <string name="hint_phone">请输入手机号码</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_new_password">请输入新密码</string>
    <string name="hint_repeat_password">请再次输入密码</string>
    <string name="hint_yzm">请输入验证码</string>
    <string name="protocolText">注册代表您同意《网上申请用户协议》</string>
    <string name="resend_d">重新发送（%d）</string>
    <string name="resend">重新发送</string>
    <string name="forget_password">忘记密码？</string>
    <string name="register">注册</string>
    <string name="home">首页</string>
    <string name="real_game_apply">实盘申请</string>
    <string name="real_game">实盘大赛</string>
    <string name="center">个人中心</string>
    <string name="more">更多</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="safe_protect">安全保障</string>
    <string name="speed_win">加速盈利</string>
    <string name="system_pro">专业系统</string>
    <string name="myGame">我的实盘</string>
    <string name="competition">比赛</string>
    <string name="setting">设置</string>
    <string name="help">帮助</string>
    <string name="about">关于金操盘</string>
    <string name="buyIn">买入</string>
    <string name="sellOut">卖出</string>
    <string name="recharge">充值</string>
    <string name="apply_real_tn">实盘申请T+N</string>
    <string name="apply_real_t9">实盘申请T+9</string>
    <string name="fresher_help">新手帮助</string>
    <string name="capital">资产</string>
    <string name="holdings">持仓</string>
    <string name="cancellationEntrust">委托/撤单</string>
    <string name="deal">成交</string>
    <string name="chooseContract">选择合约</string>
    <string name="usable_money__">可用金额：</string>
    <string name="win_money__">盈亏金额：</string>
    <string name="stockValue__">股票市值：</string>
    <string name="totalCapital__">总资产：</string>
    <string name="reset">重置</string>
    <string name="switch_graphic">切换分时图</string>
    <string name="tradeType">交易类型：</string>
    <string name="cancel">取消</string>
    <string name="cancelOrder">撤单</string>
    <string name="cancelAndRebuy">撤单并重新买入</string>
    <string name="account_remain_">账户余额：</string>
    <string name="hot">正在热销</string>
    <string name="tn">T+N</string>
    <string name="t9">T+9</string>
    <string name="quota">名额</string>
    <string name="new_member_first">新用户首次专享</string>
    <string name="yjy">易交易</string>
    <string name="totalCapital">配资总计</string>
    <string name="totalMember">总人数</string>
    <string name="__test_data">450 000 000元</string>
    <string name="__test_data_3000_people">3000人</string>
    <string name="__test_money_450_000_000_000">450 000 000 000元</string>
    <string name="__stop_fail_12_5">-12.5止损</string>
    <string name="newGift">迎新礼</string>
    <string name="newEnjoy">新人专享</string>
    <string name="newPeopleEnjoy">新手专享</string>
    <string name="title_activity_t9_tn">T9TNActivity</string>
    <string name="ten_thousand">万元</string>
    <string name="yuan">元</string>
    <string name="manageFee">账户管理费</string>
    <string name="pingCang">平仓线</string>
    <string name="pingCangSummary_f">(平仓线=操盘保证金*%.2f)</string>
    <string name="tradersMargins">操盘保证金</string>
    <string name="payNow">立即支付</string>
    <string name="introduce">玩法介绍</string>
    <string name="change_group">换组金额</string>
    <string name="countCapital__">平台累计配资：</string>
    <string name="myContest_d">我的大赛（%d）</string>
    <string name="myPopularize_d">我的推广（%d）</string>
    <string name="myContract_d">当前合约（%d）</string>
    <string name="help_info">常见问题</string>
    <string name="title_activity_change_data">ChangeData</string>
    <string name="gender">性别</string>
    <string name="male">男</string>
    <string name="birthday">生日</string>
    <string name="liveHood">居住地</string>
    <string name="nickName">昵称</string>
    <string name="education_lvl">教育程度</string>
    <string name="handPassword">手势密码</string>
    <string name="setAlready">已设置</string>
    <string name="notSet">未设置</string>
    <string name="investment_exp">投资经验</string>
    <string name="hint_investment_lvl">请输入投资经验</string>
    <string name="avatar">头像</string>
    <string name="logout">注销登录</string>
    <string name="title_activity_fresh">新手专享</string>
    <string name="GoldIngot_s">金元宝：%s个</string>
    <string name="caopan_s">操盘券：%s个</string>
    <string name="confirm">确定</string>
    <string name="hold_stock">持有股票</string>
    <string name="float_balance">浮动盈亏</string>
    <string name="hold_count">持仓数量</string>
    <string name="chicangshi">持仓市</string>
    <string name="know_detail"><![CDATA[>>了解详情]]></string>
    <string name="di">第</string>
    <string name="mi">名</string>
    <string name="title_activity_game_info">GameInfo</string>
    <string name="rankList">排行榜</string>
    <string name="gameList">大赛列表</string>
    <string name="my_game">我参加的比赛</string>
    <string name="contest">大赛</string>
    <string-array name="genders">
        <item>男</item>
        <item>女</item>
    </string-array>
    <string name="title_activity_rank">RankActivity</string>
    <string name="personal_rank">个人排名</string>
    <string name="experienceNow">立即体验</string>
    <string name="buyPrice">买入价格</string>
    <string name="buyAmount">买入数量</string>
    <string name="sellPrice">卖出价格</string>
    <string name="sellAmount">卖出数量</string>
    <string name="canBuyAmount">可买数量：</string>
    <string name="canSellAmount">可卖数量：</string>
    <string name="title_activity_recharge">RechargeActivity</string>
    <string name="onlinePay_yb">网银支付（易宝）</string>
    <string name="bankPay">银行转账</string>
    <string name="YB">易宝</string>
    <string name="YB_day">易宝/天</string>
    <string name="confirmPay">确认支付</string>
    <string name="accountInfo">帐号：11014718678007 \n户名：南京融证通网络科技有限公司 \n开户行：平安银行南京奥体支行</string>
    <string name="transferMoneyNotice">1、转账时金额最好有些零头（如1000.85），这样我们好确认是您的汇款 \n2、用户网银转账之后，请务必保留网银转账成功时的截图，并在 资金或者转账用途中 备注清自己要转入的XX用户名 ，将回单发到QQ客服，以便尽快到账！</string>
    <string name="transferMoneySummary">您可以通过网上银行或银行柜台向南京融证通网络科技有限公司转账（手续费最多一笔50易宝）</string>
    <string name="dial_service">一键客服</string>
    <string name="tn_notice">提醒：申请当日必须买入股票，T+N日14:40分之前必须卖出股票，14:40分之后系统自动平仓</string>
    <string name="notice2">盈利全归您，亏损我们来承担！</string>
    <string name="register_ing">注册中…</string>
    <string name="re_register">重新注册</string>
    <string name="login_ing">登录中…</string>
    <string name="op_ing">操作中…</string>
    <string name="re_login">重新登录</string>
    <string name="get_info">获取用户信息…</string>
    <string name="remain_money_s">账户余额：￥%s</string>
    <string name="login_fail">登录失败</string>
    <string name="register_fail">注册失败</string>
    <string name="game_start_end_s">赛事起止时间：%s</string>
    <string name="Elite">精英赛</string>
    <string name="sea_race">海选赛</string>
    <string name="normal_race">普通赛</string>
    <string name="not_race">非比赛</string>
    <string name="unknow">未知</string>
    <string name="rate_f">%.2f%%</string>
    <string name="new_price_s">最新价：%s</string>
    <string name="average_price_s">均价：%s</string>
    <string-array name="numbers">
        <item>①</item>
        <item>②</item>
        <item>③</item>
        <item>④</item>
        <item>⑤</item>
        <item>⑥</item>
        <item>⑦</item>
    </string-array>
    <string name="title_activity_message">MessageActivity</string>
    <string name="title_activity_about">关于我们</string>
    <string name="popularize">推广管理</string>
    <string name="about_text">&#160;&#160;&#160;&#160;&#160;&#160;&#160;易交易（www.yjy998.com）以先进的互联网技术为支撑，致力于倡导新型资金融合模式，整合金融业与其他金融机构的关系，建立开放共享的互联网金融平台，为投资者在证券、基金、期货、信托、私募等领域提供更低成本、更快速度、更小风险、更高效益的投资通道。</string>
    <string name="curVersion_s">当前版本：%s</string>
    <string name="warn">温馨提示</string>
    <string name="find_new_version">发现新版本！</string>
    <string name="download_failed">下载失败！</string>
    <string name="income_rate_f">收益率%.2f%%</string>
    <string name="title_activity_contract_info">ContractInfo</string>
    <string name="confirm_logout">确定退出？</string>
    <string name="userName">用户名</string>
    <string name="userName_not_login">登录 | 注册</string>
    <string name="apply_date">申请日期：%s</string>
    <string name="s_day">%s元/天</string>
    <string name="dealing">处理中…</string>
    <string name="retry">重试</string>
    <string name="trade">交易</string>
    <string name="contract_no_s">合约编号：%s</string>
    <string name="contractType_s">类型：%s</string>
    <string name="total_capital_s">总资产：%s</string>
    <string name="relative_area_s">关联赛区：%s</string>
    <string name="apply_date_s">申请日期：%s</string>
    <string name="entrustTime_s">委托时间：%s</string>
    <string name="dealTime_s">成交时间：%s</string>
    <string name="time_s">时间：%s</string>
    <string name="dealPrice_s">成交金额：%s</string>
    <string name="contract_s1_s2">%1$s 编号：%2$s</string>
    <string name="entrusting">委托中</string>
    <string name="canceledOrder">已撤单</string>
    <string name="deal_done">已成交</string>
    <string name="contract_not_selected">请选择合约</string>
    <string name="stock_not_selected">请选择股票</string>
    <string name="draw_gesture_psw">请绘制手势密码</string>
    <string name="draw_open_gesture_psw">绘制解锁密码</string>
    <string name="open_lock_failed_d">密码错了，还可输入%d次</string>
    <string name="draw_gesture_second">请再次绘制手势密码</string>
    <string name="re_draw_gesture">与上次绘制不一样，请重新绘制</string>
    <string name="password_failed">手势密码已失效，请重新登录！</string>
    <string name="please_login_first">请先登录或注册！</string>
    <string name="load_amount">加载账户资产…</string>
    <string name="toast_no_stock">没有选择股票</string>
    <string name="toast_no_price">请输入价格</string>
    <string name="toast_no_amout">请输入数量</string>
    <string name="get_contract_info_ing">获取合约详情…</string>
    <string name="close_psw">关闭手势密码</string>
    <string name="change_hand_psw">修改手势密码</string>
    <string name="open_psw">开启手势密码</string>
    <string name="forget_hand_psw_msg">忘记手势密码，需要重新登录,手势密码将自动失效</string>
    <string name="update_now">立即升级</string>
    <string name="download_ok">下载完成！</string>
    <string name="install_now">立即安装</string>
    <string name="no_data">没有数据</string>
    <string name="no_contest">没有大赛</string>
    <string name="no_contract">没有合约</string>
    <string name="no_my_contest">你还没有参加大赛</string>
    <string name="no_entrust_data">没有委托撤单信息</string>
    <string name="no_s_data">没有%s数据</string>
    <string name="repeat_not_equal">两次密码输入不一致</string>
    <string name="phone_not_correct">手机号格式不正确</string>
    <string name="password_length_error">密码长度介于6–20位</string>
    <string name="title_activity_contest_apply">ContestApplyActivity</string>
    <string name="i_want_op">我要操盘</string>
    <string name="usable_s_money">账户可用余额：%s易宝</string>
    <string name="title_activity_popularize">PopularizeActivity</string>
    <string name="s_yuan">%s元</string>
    <string name="diary">日志</string>
    <string name="invite_friend">邀请好友</string>
    <string name="act_introduce">活动说明</string>
    <string name="income_flow">返利流水</string>
    <string name="total_s_people">累计邀请：%s人</string>
    <string name="total_invite_people">累计邀请：0人</string>
    <string name="title_activity_invite_friends">InviteFriends</string>
    <string name="my_zx_code">我的二维码</string>
    <string name="invite_friends">邀请好友</string>
</resources>