<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.yjy998.ui.activity.main.apply.ApplyActivity">

    <com.sp.lib.widget.pager.title.PageStrip
        android:id="@+id/pageStrip"
        android:layout_width="match_parent"
        app:indicator="@color/deepBlue"
        android:background="#F2F2F2"
        android:layout_height="@dimen/center_tab_height">

        <com.yjy998.ui.view.ViewPagerTabItem
            style="@style/pageTitleStyle"
            android:checked="true"
            android:text="@string/buyIn" />

        <View
            style="@style/verticalLine"
            android:background="@color/textColorDeepGray"
            android:layout_marginTop="@dimen/dimen_18px"
            android:layout_marginBottom="@dimen/dimen_18px" />

        <com.yjy998.ui.view.ViewPagerTabItem
            style="@style/pageTitleStyle"
            android:text="@string/sellOut" />

        <View
            style="@style/verticalLine"
            android:background="@color/textColorDeepGray"
            android:layout_marginTop="@dimen/dimen_18px"
            android:layout_marginBottom="@dimen/dimen_18px" />

        <com.yjy998.ui.view.ViewPagerTabItem
            style="@style/pageTitleStyle"
            android:text="@string/holdings" />

        <View
            style="@style/verticalLine"
            android:background="@color/textColorDeepGray"
            android:layout_marginTop="@dimen/dimen_18px"
            android:layout_marginBottom="@dimen/dimen_18px" />

        <com.yjy998.ui.view.ViewPagerTabItem
            style="@style/pageTitleStyle"
            android:text="@string/cancellationEntrust" />

        <View
            style="@style/verticalLine"
            android:background="@color/textColorDeepGray"
            android:layout_marginTop="@dimen/dimen_18px"
            android:layout_marginBottom="@dimen/dimen_18px" />

        <com.yjy998.ui.view.ViewPagerTabItem
            style="@style/pageTitleStyle"
            android:text="@string/deal" />
    </com.sp.lib.widget.pager.title.PageStrip>

    <android.support.v4.view.ViewPager
        android:layout_width="match_parent"
        android:id="@+id/pager"
        android:layout_height="match_parent" />
</LinearLayout>
