<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yjy998.ui.activity.main.apply.ApplyActivity">

    <HorizontalScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.sp.lib.widget.pager.title.PageStrip
            android:id="@+id/pageStrip"
            android:layout_width="wrap_content"
            android:background="#F2F2F2"
            app:indicator="@color/deepBlue"
            android:layout_height="@dimen/center_tab_height">

            <com.yjy998.ui.view.ViewPagerTabItem
                style="@style/pageTitleStyle.game2"
                android:text="@string/my_game" />

            <com.yjy998.ui.view.ViewPagerTabItem
                style="@style/pageTitleStyle.game2"
                android:checked="true"
                android:text="@string/sea_race" />

            <com.yjy998.ui.view.ViewPagerTabItem
                style="@style/pageTitleStyle.game2"
                android:text="@string/Elite" />


            <com.yjy998.ui.view.ViewPagerTabItem
                style="@style/pageTitleStyle.game2"
                android:text="@string/normal_race" />

            <com.yjy998.ui.view.ViewPagerTabItem
                style="@style/pageTitleStyle.game2"
                android:text="@string/other" />


        </com.sp.lib.widget.pager.title.PageStrip>
    </HorizontalScrollView>


    <android.support.v4.view.ViewPager
        android:layout_width="match_parent"
        android:id="@+id/pager"
        android:layout_height="match_parent" />
</LinearLayout>
